Add Built by Fer Patel backlink to footer
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -836,6 +836,7 @@
     <span>Unleashed Operators Circle™ Mastermind</span><br>
     Private · Application Only
   </div>
+  <div style="width:100%;text-align:center;font-size:.72rem;opacity:.4;margin-top:1.25rem;">Built by <a href="https://www.ferpatel.com/" target="_blank" rel="noopener noreferrer" style="color:inherit;text-decoration:none;">Fer Patel</a></div>
 </footer>
 
 <script>
